--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             </header>
             
             <!-- Editor Area -->
-            <div id="main-content-area" class="flex-grow flex flex-col overflow-y-auto custom-scrollbar cursor-text" onclick="document.getElementById('page-title').focus()">
+            <div id="main-content-area" class="flex-grow flex flex-col overflow-y-auto custom-scrollbar cursor-text">
                 <div class="w-full max-w-4xl px-8 md:px-24 pt-12 pb-32 mx-auto">
                     <!-- Título de Página -->
                     <div class="group mb-4 relative">
@@ -138,4 +138,5 @@
     
     <script src="script.js"></script>
 </body>
+
 </html>
